--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ build_flags =
     ; -D EXTERNAL_WEBUI
     ; -D SWIO_PIN=
     ; -D ARDUINO_OTA
-    ; -D WIFI_AP_NAME
-    ; -D WIFI_PASSWORD
+    ; -D WIFI_AP_NAME=
+    ; -D WIFI_PASSWORD=
     ; -D R_GLITCH_HIGH 
 
 [env:esp32-c3-devkitc-02]
@@ -60,7 +60,7 @@ build_flags =
     ${env.build_flags}
     -D DEFAULT_T1COEFF=10
     -D Uart=Serial1
-    ; -D R_GLITCH_HIGH
+
 [env:esp32devOld]
 platform = espressif32@6.5.0
 extends = env
@@ -71,4 +71,3 @@ build_flags =
     ${env.build_flags}
     -D DEFAULT_T1COEFF=10
     -D Uart=Serial1
-    ; -D R_GLITCH_HIGH
