Trying to make R_GLITCH_HIGH work

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,20 +26,9 @@ build_flags =
     ; -D ARDUINO_OTA
     ; -D WIFI_AP_NAME=
     ; -D WIFI_PASSWORD=
-    ; -D R_GLITCH_HIGH 
+    -D R_GLITCH_HIGH 
 
 [env:esp32-c3-devkitc-02]
-extends = env
-board = esp32-c3-devkitc-02
-board_build.partitions = no_ota.csv
-build_flags =
-    ${env.build_flags}
-    -D ARDUINO_USB_CDC_ON_BOOT
-    -D ARDUINO_USB_MODE
-    -D DEFAULT_T1COEFF=7
-    -D Uart=Serial0
-
-[env:esp32-c3-devkitc-02old]
 platform = espressif32@6.5.0
 extends = env
 board = esp32-c3-devkitc-02
@@ -52,16 +41,6 @@ build_flags =
     -D Uart=Serial0
 
 [env:esp32dev]
-extends = env
-board = esp32dev
-board_build.partitions = no_ota.csv
-board_build.f_cpu = 240000000L
-build_flags =
-    ${env.build_flags}
-    -D DEFAULT_T1COEFF=10
-    -D Uart=Serial1
-
-[env:esp32devOld]
 platform = espressif32@6.5.0
 extends = env
 board = esp32dev
