Default to no glitch

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,13 +20,13 @@ build_flags =
     -D CONFIG_ASYNC_TCP_QUEUE_SIZE=64
     ; -D ASYNC_MAX_ACK_TIME=3000
     -D SW_VERSION=${env.firmware_version}
-    -D CORE_DEBUG_LEVEL=5
+    ; -D CORE_DEBUG_LEVEL=5
     ; -D EXTERNAL_WEBUI
     ; -D SWIO_PIN=
     ; -D ARDUINO_OTA
     ; -D WIFI_AP_NAME=
     ; -D WIFI_PASSWORD=
-    -D R_GLITCH_HIGH 
+    ; -D R_GLITCH_HIGH 
 
 [env:esp32-c3-devkitc-02]
 platform = espressif32@6.5.0
