Added /status and retries to flash function

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ build_flags =
     ; -D EXTERNAL_WEBUI
     ; -D SWIO_PIN=
     ; -D ARDUINO_OTA
-    ; -D WIFI_AP_NAME=
-    ; -D WIFI_PASSWORD=
+    ; -D WIFI_AP_NAME=\"wifi_ap_name\"
+    ; -D WIFI_PASSWORD=\"secret_password\"
     ; -D R_GLITCH_HIGH 
 
 [env:esp32-c3-devkitc-02]
